styles/base.css
/* Fonts */

@font-face {
	font-family: Roboto-regular;
	src: url("font/Roboto-Regular.woff2");
}

/* Responsive stuff */

@media only screen and (max-width: 800px) {
	body {
		margin: 5vh 6vw;
	}
}

@media only screen and (min-width: 800px) {
	body {
		margin: 5vh 10vw;
	}
}

@media only screen and (min-width: 1000px) {
	body {
		margin: 5vh 15vw;
	}
}

@media only screen and (min-width: 1200px) {
	body {
		margin: 5vh 20vw;
	}
}

@media only screen and (min-width: 1500px) {
	body {
		margin: 5vh 25vw;
	}
}

@media only screen and (min-width: 2000px) {
	body {
		margin: 5vh 30vw;
	}
}

/* Global */

body {
	font-family: 'Roboto-regular', sans-serif;
	line-height: 0.6cm;
	background-color: rgb(250, 250, 250);
	color: rgb(50, 50, 50);
}

h1, h2 {
	color: rgb(30, 30, 30);
}

p {
	line-height: 1.5;
}

a {
	text-decoration: none;
	color: #0000ee;
}

img {
	transition: width 0.5s;
}

/* Title and links */

#title {
	margin-top: 32px;
	margin-bottom: 4vh;
}

#title h1 {
	text-align: center;
}

#menu {
	display: flex;
	flex: 1 1 auto;
	justify-content: space-evenly;	
	margin-bottom: 6vh;
}

.menu-item {
	display: inline-block;
	text-align: right;
	margin: 0;
}

.menu-selected {
	color: #e90000;
	font-weight: bold;
}

/* Other */

#content h2 {
	margin-bottom: 4vh;
}

